@@ -1,3 +1,4 @@
 -Dguice_custom_class_loading=CHILD
 -XX:+EnableDynamicAgentLoading
 -Xshare:off
+--sun-misc-unsafe-memory-access=allow
